Improved the portfolio. Still need to change the pictures

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="content">
             <div id="about">
                 <h2>About</h2>
+                <hr>
                 <p>Hey</p>
                 <p>Hey</p>
             </div>
@@ -47,14 +48,70 @@
                 <h2>Portfolio</h2>
                 <hr>
                 <p>(ง •̀_•́)ง ONE DAY I'LL BE A REAL PORTFOLIO (ง •̀_•́)ง </p>
+                <div class="portfolioEntries">
+                    <div class="portfolioEntry">
+                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <div class="textColumn column-left">
+                            <a href="https://github.com/Agamenon-sama/Cataract" target="_blank">
+                                <h3>Cataract</h3>
+                            </a>
+                            <p>Cataract is a port scanner for Linux</p>
+                            <p>The project is compossed of a command line interface and a 
+                                graphical user interface written with Qt as well as libCataract, 
+                                a library that contains all the scanning capabilities of cataract 
+                                intended to be embedded in other C++ applications.
+                            </p>
+                            <p>
+                                The project started as an assignment in the computer network class but it was also 
+                                an opportunity to  rush up my Qt knowledge. The scanning capabilities of this software are 
+                                still limited but I'm planning to add more advanced scanning like SYN scan and ping scan.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="portfolioEntry">
+                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <div class="textColumn column-right">
+                            <a href="https://github.com/Agamenon-sama/Migraine" target="_blank">
+                                <h3>Migraine</h3>
+                            </a>
+                            <p>Migraine is an attempt to create a full environment for Chip8</p>
+                            <p>The project implements a chip8 emulator (interpreter) to execute chip8 programs
+                                as well as an assembler to write those programs more easily. I also want to
+                                implement a compiler but that will be for a later time. In order to help with
+                                debugging, I am also implementing debugging tools like a real-time view of
+                                the memory and registers as well as a disassembler to help reverse engineer
+                                existing programs.
+                            </p>
+                            <p>
+                                I started the project as an attempt to learn more about computer architecture.
+                                Little by little, the project started getting in size as I started getting more ambitious.
+                                I just hope I'll live to my own expectations.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="portfolioEntry">
+                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <div class="textColumn column-left">
+                            <a href="https://github.com/Agamenon-sama/WWW" target="_blank">
+                                <h3>WWW</h3>
+                            </a>
+                            <p>Web server for Linux</p>
+                            <p>A simple HTTP server for Linux. The server uses a thread pool to handle requests
+                                so it was also my first experience with multithreading.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="resume">
                 <h2>Resume</h2>
+                <hr>
                 <p>This iframe will contain the resume which will be a pdf file</p>
                 <iframe src="#"></iframe>
             </div>
             <div id="contact">
                 <h2>Contact</h2>
+                <hr>
                 <br><br><br><br><br><br><br><br><br>
             </div>
         </div>
