--- a/index.html
+++ b/index.html
@@ -112,7 +112,26 @@
             <div id="contact">
                 <h2>Contact</h2>
                 <hr>
-                <br><br><br><br><br><br><br><br><br>
+                <h3>
+                    <img src="app/res/icons/paper-plane.svg" class="icon">
+                    Email:
+                </h3>
+                <a href="mailto:chams.eddine.hachanii@gmail.com">chams.eddine.hachanii@gmail.com</a>
+                <h3>
+                    <img src="app/res/icons/phone.svg" class="icon">
+                    Phone:
+                </h3>
+                <a href="tel:chams.eddine.hachanii@gmail.com">+36 70 657 1876</a>
+                <h3>
+                    <img src="app/res/icons/github.svg" class="icon">
+                    Github:
+                </h3>
+                <a href="https://github.com/Agamenon-sama/" target="_blank">https://github.com/Agamenon-sama/</a>
+                <h3>
+                    <img src="app/res/icons/linkedin.svg" class="icon">
+                    LinkedIn:
+                </h3>
+                <a href="https://www.linkedin.com/in/chams-eddine-hachani-765179219/" target="_blank">https://www.linkedin.com/in/chams-eddine-hachani-765179219/</a>
             </div>
         </div>
         <div class="blog">
