small fix to the portfolio layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </p>
                             <p>
                                 The project started as an assignment in the computer network class but it was also 
-                                an opportunity to  rush up my Qt knowledge. The scanning capabilities of this software are 
+                                an opportunity to brush up my Qt knowledge. The scanning capabilities of this software are 
                                 still limited but I'm planning to add more advanced scanning like SYN scan and ping scan.
                             </p>
                         </div>
