--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <img src="app/res/ppic.jpg">
                 </div>
                 <div class="info">
-                    <h2>Hey there</h2>
-                    <p>Welcome to my terrible website. It's still under construction though and I actually might take some time to finish it :(</p>
+                    <h2>Chams Eddine Hachani</h2>
+                    <p>Undergraduate student at the University of Pécs, aspiring programmer and avid computer geek</p>
                 </div>
             </div>
             <div class="links-box">
@@ -37,8 +37,43 @@
             <div id="about">
                 <h2>About</h2>
                 <hr>
-                <p>Hey</p>
-                <p>Hey</p>
+                <p>
+                    Hello. My name is Chams Eddine Hachani, currently a student in the University of Pécs, Hungary, pursuing
+                    a bachelor a degree in Computer Science Engineering. I decided to study computer science as my passion
+                    for computers kept making me dig deeper and deeper into the inner functioning of them.
+                </p>
+                <p>
+                    I am currently looking for a role where I can learn more and grow as a programmer with the help of talented
+                    team members who would share their experience with me.
+                </p>
+                <br>
+                <h3>Work Experience</h3>
+                <ul>
+                    <li>
+                        <div>
+                            <h3>Student Tutor</h3>
+                            <p>Sep 2021 - Dec 2021 @ University of Pécs</p>
+                            <p>I conducted weekly sessions to help students with C programming and basic algorithms and data structures. 
+                                I also held consultations to help students with their final projects.</p>
+                        </div>
+                    </li>
+                </ul>
+                <br>
+                <h3>Honors & Awards</h3>
+                <ul>
+                    <li>
+                        <div>
+                            <h3>Student Tutor Scholarship</h3>
+                            <p>September 2021 - University of Pécs</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <h3>Stipendium Hungaricum Scholarship</h3>
+                            <p>June 2019 - Tempus Public Foundation</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div id="portfolio">
                 <h2>Portfolio</h2>
