Added my resume

--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
             <div id="resume">
                 <h2>Resume</h2>
                 <hr>
-                <p>This iframe will contain the resume which will be a pdf file</p>
-                <iframe src="#"></iframe>
+                <iframe src="app/res/CV Chams Eddine Hachani.pdf"></iframe>
             </div>
             <div id="contact">
                 <h2>Contact</h2>
