--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="intro-block">
             <div class="upper-box">
                 <div class="pic">
-                    <img src="app/res/ppic.jpg">
+                    <img src="app/res/images/ppic.jpg">
                 </div>
                 <div class="info">
                     <h2>Chams Eddine Hachani</h2>
@@ -81,7 +81,7 @@
                 <p>(ง •̀_•́)ง ONE DAY I'LL BE A REAL PORTFOLIO (ง •̀_•́)ง </p>
                 <div class="portfolioEntries">
                     <div class="portfolioEntry">
-                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <img src="app/res/images/cataract.png">
                         <div class="textColumn column-left">
                             <a href="https://github.com/Agamenon-sama/Cataract" target="_blank">
                                 <h3>Cataract</h3>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="portfolioEntry">
-                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <img src="app/res/images/migraine.png">
                         <div class="textColumn column-right">
                             <a href="https://github.com/Agamenon-sama/Migraine" target="_blank">
                                 <h3>Migraine</h3>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="portfolioEntry">
-                        <img src="https://yt3.ggpht.com/GxsR2vEf2ulGF-SkvmUEuEzOsPMqg2y3sBSEWsxwzy6giIK-A1f0VLxdFE7Ro3r6rnFDEixA0uc=s900-c-k-c0x00ffffff-no-rj">
+                        <img src="app/res/images/httpserver.png">
                         <div class="textColumn column-left">
                             <a href="https://github.com/Agamenon-sama/WWW" target="_blank">
                                 <h3>WWW</h3>
