--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <img src="app/res/icons/phone.svg" class="icon">
                     Phone:
                 </h3>
-                <a href="tel:chams.eddine.hachanii@gmail.com">+36 70 657 1876</a>
+                <a href="tel:+36706571876">+36 70 657 1876</a>
                 <h3>
                     <img src="app/res/icons/github.svg" class="icon">
                     Github:
