Changed page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="The personal website where I put my stuff">
         <meta name="author" content="Agamenon">
 
-        <title>You're wasting your time here</title>
+        <title>Agamenon's crypt</title>
 
         <link rel="stylesheet" href="app/css/layout.css">
     </head>
