Added my internship

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                 <ul>
                     <li>
                         <div>
+                            <h3>Software Engineering Intern</h3>
+                            <p>Feb 2023 - Apr 2023 @ University of Pécs</p>
+                            <p>I ported a matlab script to a GPU accelerated program using C++ and OpenCL.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
                             <h3>Student Tutor</h3>
                             <p>Sep 2021 - Dec 2021 @ University of Pécs</p>
                             <p>I conducted weekly sessions to help students with C programming and basic algorithms and data structures. 
