--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
                 <div class="portfolioEntries">
                     <div class="portfolioEntry">
                         <div class="textColumn column-left">
+                            <a href="https://github.com/Agamenon-sama/Mastoid/" target="_blank">
+                                <h3>Mastoid</h3>
+                            </a>
+                            <p>File-based music player</p>
+                            <p>The project stems from my frustration at not finding a music player
+                                that suits my workflow of using a simple file-based approach with no
+                                reliance on web services and application-specific abstractions.
+                                After not finding what I wanted, I decided to make the application
+                                that suits me.
+                            </p>
+                            <p>
+                                This project is made with QML, C++ and the Qt framework. Some special 
+                                effects required the use of GLSL shaders.
+                            </p>
+                        </div>
+                        <img src="app/res/images/mastoid.png">
+                    </div>
+                    <div class="portfolioEntry">
+                        <div class="textColumn column-left">
                             <a href="https://github.com/Agamenon-sama/Cataract" target="_blank">
                                 <h3>Cataract</h3>
                             </a>
