--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="info">
                     <h2>Chams Eddine Hachani</h2>
-                    <p>Undergraduate student at the University of Pécs, aspiring programmer and avid computer geek</p>
+                    <p>MSc student at the University of Debrecen, aspiring programmer and avid computer geek</p>
                 </div>
             </div>
             <div class="links-box">
@@ -38,9 +38,8 @@
                 <h2>About</h2>
                 <hr>
                 <p>
-                    Hello. My name is Chams Eddine Hachani, currently a student in the University of Pécs, Hungary, pursuing
-                    a bachelor a degree in Computer Science Engineering. I decided to study computer science as my passion
-                    for computers kept making me dig deeper and deeper into the inner functioning of them.
+                    Hello. My name is Chams Eddine Hachani, currently a student in the University of Debrecen, Hungary, pursuing
+                    a Masters degree in Computer Science.
                 </p>
                 <p>
                     I am currently looking for a role where I can learn more and grow as a programmer with the help of talented
@@ -49,6 +48,16 @@
                 <br>
                 <h3>Work Experience</h3>
                 <ul>
+                    <li>
+                        <div>
+                            <h3>Programming Instructor</h3>
+                            <p>Dec 2024 - Feb 2025 @ University of Debrecen</p>
+                            <p>
+                                I taught JavaScript to freshmen to prepare them to take the ITS-JS exam to aquire
+                                the JavaScript specialist certificate.
+                            </p>
+                        </div>
+                    </li>
                     <li>
                         <div>
                             <h3>Software Engineering Intern</h3>
