--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="https://agamenon-sama.github.io/blog/">Blog</a></li>
                 </ul>
             </div>
         </div>
