Fixed broken links

--- a/404.html
+++ b/404.html
@@ -26,10 +26,10 @@
                         <div class="card-content">
                             <ul>
                                 <li><a href="/">Home</a></li>
-                                <li><a href="https://agamenon-sama.github.io/blog">Blog</a></li>
-                                <li><a href="https://agamenon-sama.github.io/blog/posts">Posts</a></li>
-                                <li><a href="https://agamenon-sama.github.io/links">Links</a></li>
-                                <li><a href="https://agamenon-sama.github.io/blog/feed.xml">Feed</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog/posts">Posts</a></li>
+                                <li><a href="/blog/links">Links</a></li>
+                                <li><a href="/blog/feed.xml">Feed</a></li>
                             </ul>
                         </div>
                     </div>
