--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
         <title>Agamenon's crypt</title>
 
+        <link rel="shortcut icon" href="https://agamenon-sama.github.io/app/res/icons/favicon.png" type="image/x-icon">
+
         <link rel="stylesheet" href="app/css/layout.css">
     </head>
 
