--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
                             <form action="/blog/search" method="get" class="search-form">
                                 <input type="search" name="q" placeholder="Search.." class="search-box">
                                 <button class="search-button">
-                        <img src="/res/icons//magnifying-glass-solid.svg">
+                        <img src="https://agamenon-sama.github.io/app/res/icons/magnifying-glass-solid.svg">
                     </button>
                             </form>
                         </div>
@@ -92,6 +92,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://agamenon-sama.github.io/app/js/EasterEgg.js"></script>
 </body>
 
 </html>
